--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@ body{
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 95%;
 }
+a{
+  color: blue;
+}
 li{
   display: inline;
   padding:7%;
